--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "using sass, html5, css3, animations, responsive portfolio",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive"
   },
   "repository": {
     "type": "git",
